# roar

./: ChangeLog  README  build.bat  build.sh  configure.ac  containerbuildapp.sh  dockerbuild.bat  dockerbuild.sh  dockerfile  localbuildapp.sh  package-build.sh  xroar-build.sh
SDL/: build.sh  dockerbuild.bat  dockerbuild.sh  dockerfile
TRE/: build.sh  dockerbuild.bat  dockerbuild.sh  dockerfile
doc/: Makefile.am  xroar.1.in  xroar.texi
portalib/: delegate.h  sdsx.h
src/: .gitignore  Makefile.am  auto_kbd.c  ay891x.c  becker.c  blockdev.c  cart.c  cart.h  coco3.c  crc16.c  crc16.h  deltados.c  deluxecoco.c  dkbd.c  dragon.c  dragon64.c  dragondos.c  dragonpro.c  filereq_cli.c  filter.c  fs.c  fs.h  gdb.c  gmc.c  hexs19.c  hkbd.c  hkbd.h  hkbd_joystick.c  ide.c  idecart.c  joystick.c  joystick.h  keyboard.c  keyboard.h  logging.h  machine.c  machine.h  main_unix.c  mc10.c  mc6883.c  (+47 more)
src/alsa/: ao_alsa.c
src/gtk2/: common.c  common.h  drivecontrol.c  drivecontrol.h  drivecontrol.ui  filereq_gtk2.c  gtk2.gresource.c  joystick_gtk2.c  keyboard_gtk2.c  menu.ui  tapecontrol.c  tapecontrol.h  ui_gtk2.c  video_options.c  video_options.h  video_options.ui  vo_gtkgl.c
src/gtk3/: common.c  common.h  drivecontrol.c  drivecontrol.h  drivecontrol.ui  filereq_gtk3.c  gtk3.gresource.c  gtk3.gresource.xml  joystick_gtk3.c  keyboard_gtk3.c  keyboard_gtk3_mappings.c  menu.ui  printercontrol.c  printercontrol.h  tapecontrol.c  tapecontrol.h  ui_gtk3.c  video_options.c  video_options.h  vo_gtk3.c  (+2 more)
tools/: Makefile.am  win2rc
wasm/: software.js  xroar-wasm.css  xroar-wasm.html
(+50 files in other folders)
